<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
    <data>

    </data>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_module_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"/>

            <TextView
                android:id="@+id/tv_status"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textColor="@android:color/holo_red_dark"
                android:layout_marginStart="10dp"/>

        </LinearLayout>        <Button
            android:id="@+id/btn_init"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@drawable/bg_round"
            android:text="@string/initialize"
            android:textColor="@color/colorTextPrimary"
            android:layout_marginTop="10dp" />

        <Button
            android:id="@+id/btn_request"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@drawable/bg_round"
            android:text="@string/active_read_battery_info"
            android:textColor="@color/colorTextPrimary"
            android:layout_marginTop="10dp" />


        <Button
            android:id="@+id/btn_reader_model"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@drawable/bg_round"
            android:text="@string/rfid_reader_model"
            android:textColor="@color/colorTextPrimary"
            android:layout_marginTop="10dp" />

        <Button
            android:id="@+id/btn_release"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@drawable/bg_round"
            android:text="@string/release"
            android:textColor="@color/colorTextPrimary"
            android:layout_marginTop="10dp" />


        <include layout="@layout/layout_output"/>

    </LinearLayout>

</layout>